--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
-h1{
-    color: aqua;
+.c-bg{
+    background-color: rgb(252, 234, 232);
+}
+.c-btn{
+    background-color: rgb(255,70,144);
+    color: rgb(255, 255, 255);
+}
+.c-watch1{
+    background-color: rgb(255,165,0);
 }
